src/test/deca/syntax/invalid/declVar-invalidInitialization.synt
declVar-invalidInitialization.deca:2: